Move marker files to markers/; update index.html paths; add README with deploy instructions

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
     <!-- NFT Markers mapped to your images/models -->
     <!-- School image -> Pupil model -->
-    <a-nft type="nft" url="Models/School" smooth="true" id="marker-school">
+    <a-nft type="nft" url="markers/School" smooth="true" id="marker-school">
       <a-plane id="dragplane-school" class="raytarget"
                position="0 0 0" rotation="-90 0 0" width="2" height="2"
                material="color: #000; opacity: 0; transparent: true"></a-plane>
@@ -223,7 +223,7 @@
     </a-nft>
 
     <!-- Class image -> Book model -->
-    <a-nft type="nft" url="Models/Class" smooth="true" id="marker-class">
+    <a-nft type="nft" url="markers/Class" smooth="true" id="marker-class">
       <a-plane id="dragplane-class" class="raytarget"
                position="0 0 0" rotation="-90 0 0" width="2" height="2"
                material="color: #000; opacity: 0; transparent: true"></a-plane>
@@ -241,7 +241,7 @@
     </a-nft>
 
     <!-- Gym image -> Ball model -->
-    <a-nft type="nft" url="Models/Gym" smooth="true" id="marker-gym">
+    <a-nft type="nft" url="markers/Gym" smooth="true" id="marker-gym">
       <a-plane id="dragplane-gym" class="raytarget"
                position="0 0 0" rotation="-90 0 0" width="2" height="2"
                material="color: #000; opacity: 0; transparent: true"></a-plane>
