Make book model smaller; add debug panel and marker event logging

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
       font: 600 14px/1 system-ui, -apple-system, Segoe UI, Roboto, sans-serif; z-index: 20;
       pointer-events: none;
     }
+    .debug {
+      position: fixed; right: 12px; top: 12px; width: 220px; max-height: 40vh; overflow:auto;
+      background: rgba(0,0,0,0.6); color: #fff; padding: 8px; border-radius: 8px; z-index: 21;
+      font: 12px/1 system-ui, -apple-system, Segoe UI, Roboto, sans-serif; pointer-events: none;
+    }
   </style>
 
   <script>
@@ -197,6 +202,7 @@
     <button id="btn-color">🎨</button>
   </div>
   <div class="status" id="status">No marker detected</div>
+  <div class="debug" id="debug">Markers: scanning...</div>
 
   <a-scene
     embedded
@@ -238,7 +244,7 @@
 
       <a-entity id="bookModel" class="raytarget"
             gltf-model="url(3D/Book.glb)"
-            position="0 0.18 0" rotation="0 0 0" scale="0.9 0.9 0.9"
+            position="0 0.12 0" rotation="0 0 0" scale="0.3 0.3 0.3"
                 visible="false"
                 tap-gestures spin-toggle
                 drag-on-plane="plane: #dragplane-class; yOffset: 0.1; radius: 0.6"
@@ -347,36 +353,52 @@
 
     // Helper to set status text
     const statusEl = document.getElementById('status');
-    function setStatus(text){
-      if (!statusEl) return; statusEl.textContent = text;
-    }
+    const debugEl  = document.getElementById('debug');
+    function setStatus(text){ if (!statusEl) return; statusEl.textContent = text; }
+    function debug(msg){ if (!debugEl) return; const li=document.createElement('div'); li.textContent = msg; debugEl.appendChild(li); debugEl.scrollTop = debugEl.scrollHeight; }
+
+    // show registered a-nft elements and their URLs
+    (function listRegisteredMarkers(){
+      const arr = Array.from(document.querySelectorAll('a-nft'));
+      if (!arr.length) { debug('No <a-nft> elements found'); return; }
+      arr.forEach(el => {
+        const u = el.getAttribute('url') || el.getAttribute('src') || 'unknown';
+        debug(`Registered marker element id=${el.id || '<no-id>'} url=${u}`);
+      });
+    })();
 
     // Marker found/lost handlers: show/hide corresponding model and update status
     markerSchool.addEventListener('markerFound', () => {
       pupil.setAttribute('visible','true');
       setStatus('Detected: School');
+      debug('markerFound: School @ ' + new Date().toLocaleTimeString());
     });
     markerSchool.addEventListener('markerLost', () => {
       pupil.setAttribute('visible','false');
       setStatus('No marker detected');
+      debug('markerLost: School @ ' + new Date().toLocaleTimeString());
     });
 
     markerClass.addEventListener('markerFound', () => {
       book.setAttribute('visible','true');
       setStatus('Detected: Class');
+      debug('markerFound: Class @ ' + new Date().toLocaleTimeString());
     });
     markerClass.addEventListener('markerLost', () => {
       book.setAttribute('visible','false');
       setStatus('No marker detected');
+      debug('markerLost: Class @ ' + new Date().toLocaleTimeString());
     });
 
     markerGym.addEventListener('markerFound', () => {
       ball.setAttribute('visible','true');
       setStatus('Detected: Gym');
+      debug('markerFound: Gym @ ' + new Date().toLocaleTimeString());
     });
     markerGym.addEventListener('markerLost', () => {
       ball.setAttribute('visible','false');
       setStatus('No marker detected');
+      debug('markerLost: Gym @ ' + new Date().toLocaleTimeString());
     });
   </script>
 </body>
