--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
     <a-entity light="type: directional; intensity: 0.6" position="0 1 1"></a-entity>
 
     <!-- NFT Markers mapped to your images/models -->
-    <!-- School image -> Pupil model -->
+    <!-- School image -> BOOK model (TEST) -->
     <a-nft type="nft" url="./markers/School" smooth="true" changeMatrixMode="modelViewMatrix" id="marker-school">
       <a-plane id="dragplane-school" class="raytarget"
                position="0 0 0" rotation="-90 0 0" width="2" height="2"
                material="color: #000; opacity: 0; transparent: true"></a-plane>
 
-      <a-entity id="pupilModel" class="raytarget"
-        gltf-model="url(3D/Pupil.glb)"
+      <a-entity id="bookModel-school" class="raytarget"
+        gltf-model="url(3D/Book.glb)"
         position="0 0 0" rotation="0 0 0" scale="1 1 1"
                 visible="false"
                 tap-gestures spin-toggle
@@ -248,14 +248,14 @@
       <a-cylinder radius="0.01" height="0.001" color="#888"></a-cylinder>
     </a-nft>
 
-    <!-- Gym image -> Ball model -->
+    <!-- Gym image -> BOOK model (TEST) -->
     <a-nft type="nft" url="./markers/Gym" smooth="true" changeMatrixMode="modelViewMatrix" id="marker-gym">
       <a-plane id="dragplane-gym" class="raytarget"
                position="0 0 0" rotation="-90 0 0" width="2" height="2"
                material="color: #000; opacity: 0; transparent: true"></a-plane>
 
-      <a-entity id="ballModel" class="raytarget"
-        gltf-model="url(3D/Ball.glb)"
+      <a-entity id="bookModel-gym" class="raytarget"
+        gltf-model="url(3D/Book.glb)"
         position="0 0 0" rotation="0 0 0" scale="1 1 1"
                 visible="false"
                 tap-gestures spin-toggle
@@ -337,18 +337,18 @@
   <script>
     // HUD and model controls work on the currently visible model (if any)
     const hud    = document.getElementById('hud');
-    const pupil  = document.getElementById('pupilModel');
+    const bookSchool = document.getElementById('bookModel-school');
     const book   = document.getElementById('bookModel');
-    const ball   = document.getElementById('ballModel');
+    const bookGym = document.getElementById('bookModel-gym');
 
     const markerSchool = document.getElementById('marker-school');
     const markerClass  = document.getElementById('marker-class');
     const markerGym    = document.getElementById('marker-gym');
 
     function getActiveModel(){
-      if (pupil && pupil.getAttribute('visible')) return pupil;
+      if (bookSchool && bookSchool.getAttribute('visible')) return bookSchool;
       if (book  && book.getAttribute('visible'))  return book;
-      if (ball  && ball.getAttribute('visible'))  return ball;
+      if (bookGym && bookGym.getAttribute('visible'))  return bookGym;
       return null;
     }
 
@@ -378,7 +378,7 @@
     });
 
     // Gesture hooks for each model (tap/doubletap/longpress)
-    [pupil, book, ball].forEach(m => {
+    [bookSchool, book, bookGym].forEach(m => {
       if (!m) return;
       m.addEventListener('tap',       () => m.emit('toggle-spin'));
       m.addEventListener('doubletap', () => m.emit('random-color'));
@@ -391,13 +391,13 @@
 
     // Marker found/lost handlers: show/hide corresponding model and update status
     markerSchool.addEventListener('markerFound', () => {
-      console.log('✓ School marker FOUND - showing Pupil model');
-      pupil.setAttribute('visible','true');
+      console.log('✓ School marker FOUND - showing Book model');
+      bookSchool.setAttribute('visible','true');
       setStatus('Detected: School');
     });
     markerSchool.addEventListener('markerLost', () => {
-      console.log('✗ School marker LOST - hiding Pupil model');
-      pupil.setAttribute('visible','false');
+      console.log('✗ School marker LOST - hiding Book model');
+      bookSchool.setAttribute('visible','false');
       setStatus('No marker detected');
     });
 
@@ -413,13 +413,13 @@
     });
 
     markerGym.addEventListener('markerFound', () => {
-      console.log('✓ Gym marker FOUND - showing Ball model');
-      ball.setAttribute('visible','true');
+      console.log('✓ Gym marker FOUND - showing Book model');
+      bookGym.setAttribute('visible','true');
       setStatus('Detected: Gym');
     });
     markerGym.addEventListener('markerLost', () => {
-      console.log('✗ Gym marker LOST - hiding Ball model');
-      ball.setAttribute('visible','false');
+      console.log('✗ Gym marker LOST - hiding Book model');
+      bookGym.setAttribute('visible','false');
       setStatus('No marker detected');
     });
   </script>
