--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
 
       <a-entity id="busModel" class="raytarget"
         gltf-model="url(3D/Bus.glb)"
-        position="0 0 0" rotation="0 0 0" scale="2 2 2"
+        position="0 0 0" rotation="-90 0 0" scale="4 4 4"
+                animation__spin="property: rotation; from: -90 0 0; to: -90 360 0; loop: true; dur: 6000; easing: linear"
                 visible="false"
                 tap-gestures spin-toggle
                 drag-on-plane="plane: #dragplane-school; yOffset: 0.15; radius: 0.6"
@@ -238,7 +239,8 @@
 
       <a-entity id="bookModel" class="raytarget"
         gltf-model="url(3D/Book.glb)"
-        position="0 0 0" rotation="0 0 0" scale="0.5 0.5 0.5"
+        position="0 0 0" rotation="0 0 0" scale="0.25 0.25 0.25"
+                animation__spin="property: rotation; from: 0 0 0; to: 0 360 0; loop: true; dur: 7000; easing: linear"
                 visible="false"
                 tap-gestures spin-toggle
                 drag-on-plane="plane: #dragplane-class; yOffset: 0.1; radius: 0.6"
@@ -256,7 +258,7 @@
 
       <a-entity id="ballModel" class="raytarget"
         gltf-model="url(3D/Ball.glb)"
-        position="0 0 0" rotation="0 0 0" scale="1 1 1"
+        position="0 0 0" rotation="0 0 0" scale="5 5 5"
                 visible="false"
                 tap-gestures spin-toggle
                 drag-on-plane="plane: #dragplane-gym; yOffset: 0.18; radius: 0.6"
