--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
       <a-entity id="busModel" class="raytarget"
         gltf-model="url(3D/Bus.glb)"
-        position="0 0 0" rotation="-90 0 0" scale="4 4 4"
+        position="0 0.3 0" rotation="-90 0 0" scale="12 12 12"
                 animation__spin="property: rotation; from: -90 0 0; to: -90 360 0; loop: true; dur: 6000; easing: linear"
                 visible="false"
                 tap-gestures spin-toggle
@@ -239,7 +239,7 @@
 
       <a-entity id="bookModel" class="raytarget"
         gltf-model="url(3D/Book.glb)"
-        position="0 0 0" rotation="0 0 0" scale="0.25 0.25 0.25"
+        position="0 0.25 -0.2" rotation="0 0 0" scale="0.175 0.175 0.175"
                 animation__spin="property: rotation; from: 0 0 0; to: 0 360 0; loop: true; dur: 7000; easing: linear"
                 visible="false"
                 tap-gestures spin-toggle
@@ -258,7 +258,8 @@
 
       <a-entity id="ballModel" class="raytarget"
         gltf-model="url(3D/Ball.glb)"
-        position="0 0 0" rotation="0 0 0" scale="5 5 5"
+        position="0 0.3 0" rotation="0 0 0" scale="15 15 15"
+                animation__spin="property: rotation; from: 0 0 0; to: 0 360 0; loop: true; dur: 6500; easing: linear"
                 visible="false"
                 tap-gestures spin-toggle
                 drag-on-plane="plane: #dragplane-gym; yOffset: 0.18; radius: 0.6"
