--- a/index.html
+++ b/index.html
@@ -218,14 +218,16 @@
                position="0 0 0" rotation="-90 0 0" width="2" height="2"
                material="color: #000; opacity: 0; transparent: true"></a-plane>
 
-      <a-entity id="busModel" class="raytarget"
-        gltf-model="url(3D/Bus.glb)"
-        position="0.5 1.8 -0.5" rotation="-90 0 0" scale="20 20 20"
-          animation__spin="property: rotation; from: -90 0 0; to: -90 360 0; loop: true; dur: 9000; easing: linear"
-                visible="false"
-                tap-gestures spin-toggle
-                drag-on-plane="plane: #dragplane-school; yOffset: 0.15; radius: 0.6"
-                pinch-scale twist-rotate>
+      <a-entity id="busWrapper" position="1.5 1.8 -0.2"
+                animation__spin="property: rotation; from: 0 0 0; to: 0 360 0; loop: true; dur: 9000; easing: linear">
+        <a-entity id="busModel" class="raytarget"
+          gltf-model="url(3D/Bus.glb)"
+          position="0 0 0" rotation="-90 0 0" scale="20 20 20"
+                  visible="false"
+                  tap-gestures spin-toggle
+                  drag-on-plane="plane: #dragplane-school; yOffset: 0.15; radius: 0.6"
+                  pinch-scale twist-rotate>
+        </a-entity>
       </a-entity>
 
       <a-cylinder radius="0.01" height="0.001" color="#888"></a-cylinder>
@@ -239,7 +241,7 @@
 
       <a-entity id="bookModel" class="raytarget"
         gltf-model="url(3D/Book.glb)"
-        position="0.5 1.8 -0.5" rotation="0 0 0" scale="0.175 0.175 0.175"
+        position="1.5 1.8 -0.2" rotation="0 0 0" scale="0.175 0.175 0.175"
           animation__spin="property: rotation; from: 0 0 0; to: 0 0 360; loop: true; dur: 7000; easing: linear"
                 visible="false"
                 tap-gestures spin-toggle
@@ -258,7 +260,7 @@
 
       <a-entity id="ballModel" class="raytarget"
         gltf-model="url(3D/Ball.glb)"
-        position="0.5 1.8 -0.5" rotation="0 0 0" scale="20 20 20"
+        position="1.5 1.8 -0.2" rotation="0 0 0" scale="20 20 20"
           animation__spin="property: rotation; from: 0 0 0; to: 0 360 0; loop: true; dur: 9000; easing: linear"
                 visible="false"
                 tap-gestures spin-toggle
