--- a/index.html
+++ b/index.html
@@ -236,16 +236,14 @@
                position="0 0 0" rotation="-90 0 0" width="2" height="2"
                material="color: #000; opacity: 0; transparent: true"></a-plane>
 
-      <a-entity id="busWrapper" position="2.8 2.2 0"
-            animation__spin="property: rotation; from: 0 0 0; to: 0 360 0; loop: true; dur: 11000; easing: linear">
-        <a-entity id="busModel" class="raytarget"
-          gltf-model="url(3D/Bus.glb)"
-          position="2.8 100 -100" rotation="0 0 0" scale="12 12 12" recenter-pivot
-                  visible="false"
-                  tap-gestures spin-toggle
-                  drag-on-plane="plane: #dragplane-school; yOffset: 0.15; radius: 0.6"
-                  pinch-scale twist-rotate>
-        </a-entity>
+      <a-entity id="busModel" class="raytarget"
+        gltf-model="url(3D/Bus.glb)"
+        position="2.8 100 -100" rotation="0 0 0" scale="12 12 12"
+          animation__spin="property: rotation; from: 0 0 0; to: 0 360 0; loop: true; dur: 33000; easing: linear"
+                visible="false"
+                tap-gestures spin-toggle
+                drag-on-plane="plane: #dragplane-school; yOffset: 0.15; radius: 0.6"
+                pinch-scale twist-rotate>
       </a-entity>
 
       <a-cylinder radius="0.01" height="0.001" color="#888"></a-cylinder>
