--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 pinch-scale twist-rotate>
       </a-entity>
 
-      <a-text id="unlockText" position="0 -2 0" value="Scan the Girl first!" align="center" width="4" color="#FF6B6B" scale="0.5 0.5 0.5" visible="false"></a-text>
+      <a-text id="unlockText" position="0 1.2 0" value="Scan the Girl first!" align="center" width="8" color="#FF6B6B" scale="1 1 1" visible="false" font-size="128" font="roboto"></a-text>
 
       <a-cylinder radius="0.01" height="0.001" color="#888"></a-cylinder>
     </a-nft>
@@ -286,7 +286,7 @@
                 pinch-scale twist-rotate>
       </a-entity>
 
-      <a-text id="unlockText2" position="0 -2 0" value="Scan Girl & Book first!" align="center" width="4" color="#FF6B6B" scale="0.5 0.5 0.5" visible="false"></a-text>
+      <a-text id="unlockText2" position="0 1.2 0" value="Scan Girl & Book first!" align="center" width="8" color="#FF6B6B" scale="1 1 1" visible="false" font-size="128" font="roboto"></a-text>
 
       <a-cylinder radius="0.01" height="0.001" color="#888"></a-cylinder>
     </a-nft>
